--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,6 +1,40 @@
-FROM bvlc/caffe
+FROM bvlc/caffe:cpu
+
+RUN apt-get update \
+  && apt-get install -y python3-pip python3-dev \
+  && cd /usr/local/bin \
+  && ln -s /usr/bin/python3 python \
+  && pip3 install --upgrade pip
+
+RUN apt-get update && apt-get install -y \ 
+    wget \
+    build-essential \ 
+    cmake \ 
+    git \
+    unzip \ 
+    pkg-config \
+    python-dev \ 
+    python-opencv \ 
+    libopencv-dev \ 
+    libav-tools  \ 
+    libjpeg-dev \ 
+    libpng-dev \ 
+    libtiff-dev \ 
+    libjasper-dev \ 
+    libgtk2.0-dev \ 
+    python-numpy \ 
+    python-pycurl \ 
+    libatlas-base-dev \
+    gfortran \
+    webp \ 
+    python-opencv \ 
+    qt5-default \
+    libvtk6-dev \ 
+    zlib1g-dev 
+
+ENV LANG=en_US.UTF-8
 
 COPY /app /app
 WORKDIR /app
 
-RUN pip install -r requirements.txt 
+RUN pip3 install -r requirements.txt 
