Working python3 caffe1 and cv2

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,4 +1,4 @@
-FROM bvlc/caffe:cpu
+FROM spellrun/caffe-cpu:latest
 
 RUN apt-get update \
   && apt-get install -y python3-pip python3-dev \
@@ -16,11 +16,9 @@ RUN apt-get update && apt-get install -y \
     python-dev \ 
     python-opencv \ 
     libopencv-dev \ 
-    libav-tools  \ 
     libjpeg-dev \ 
     libpng-dev \ 
     libtiff-dev \ 
-    libjasper-dev \ 
     libgtk2.0-dev \ 
     python-numpy \ 
     python-pycurl \ 
